--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dependencies": {
         "@inertiajs/vue3": "^2.0.0-beta.3",
         "@vitejs/plugin-vue": "^5.2.1",
+        "@vue/compiler-sfc": "^3.5.13",
         "@vueuse/core": "^12.0.0",
         "autoprefixer": "^10.4.20",
         "chart.js": "^4.4.8",
